# pixi-service-generator

./: Cargo.toml  README.adoc  README.md
.github/: actionlint.yml  dependabot.yml
.github/workflows/: ci.yml  rust.yml
docs/: developer.adoc  user.adoc
src/: config.rs  init.rs  install.rs  main.rs  run.rs  unit.service.template
src/resources/: user.unit.service.tera
test/samples/: freetak.pixi.toml  sample.pixi.toml
