[package]
name = "systemd-pixi-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.22"
tera = "1.19"
log = "0.4.27"
env_logger = "0.11.8"
serde_derive = "1.0.219"
clap = { version = "4.5.37",  features = ["derive"] }
xdg = "3.0.0"
